ingress/ingress-snackbar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: order
spec:
  rules:
    - host: order.fast-snackbar.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: order-app
                port:
                  number: 80

    - host: payment.fast-snackbar.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: payment-app
                port:
                  number: 80
